--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
     },
     {
       "source": "/biz",
-      "destination": "https://cdn.shopify.com/s/files/1/0692/9334/2919/files/wifi_for_vendor.pdf?v=1749704954",
+      "destination": "https://shop.nxtsq.com/pages/business-inquiry-form",
       "permanent": true
     }
   ]
